--- a/app.yaml
+++ b/app.yaml
@@ -12,20 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START gae_flex_quickstart_yaml]
-runtime: ruby
-env: flex
+# [START gae_standard_quickstart_yaml]
+runtime: ruby25
 entrypoint: bundle exec ruby app.rb
-
-# This sample incurs costs to run on the App Engine flexible environment.
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/ruby/configuring-your-app-with-app-yaml
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
-
-# [END gae_flex_quickstart_yaml]
+instance_class: F2
+# [END gae_standard_quickstart_yaml]
