--- a/app.yaml
+++ b/app.yaml
@@ -16,4 +16,9 @@
 runtime: ruby25
 entrypoint: bundle exec ruby app.rb
 instance_class: F2
+handlers:
+ - url: /.*
+   script: auto
+   secure: always
+   redirect_http_response_code: 301
 # [END gae_standard_quickstart_yaml]
